file-system. The directory view needs to be reloaded manually to follow
ongoing document processing.

* Action "isabelle-session-browser" points the File Browser to session
information, based on the "isabelle-session:" virtual file-system. Its
entries are structured according to chapter / session names, the open
operation is redirected to the session ROOT file.

* Fonts for the text area, gutter, GUI elements etc. use the "Isabelle
DejaVu" collection by default, which provides uniform rendering quality
with the usual Isabelle symbols. Line spacing no longer needs to be
adjusted: properties for the old IsabelleText font had "Global Options /
Text Area / Extra vertical line spacing (in pixels): -2", now it
defaults to 0.

* Improved sub-pixel font rendering (especially on Linux), thanks to
OpenJDK 11.

* Support for user-defined file-formats via class isabelle.File_Format
in Isabelle/Scala (e.g. see isabelle.Bibtex.File_Format), configured via
the shell function "isabelle_file_format" in etc/settings (e.g. of an
Isabelle component).


*** Isar ***

* More robust treatment of structural errors: begin/end blocks take
precedence over goal/proof.

* Implicit cases goal1, goal2, goal3, etc. have been discontinued
(legacy feature since Isabelle2016).


*** HOL ***

* the functions \<Union>, \<Inter>, \<Squnion>, \<Sqinter>
(not the corresponding binding operators) now have the same precedence
as any other prefix function symbol.

* Slightly more conventional naming schema in structure Inductive.
Minor INCOMPATIBILITY.

* Code generation: command 'export_code' without file keyword exports
code as regular theory export, which can be materialized using the
command-line tool "isabelle export" or 'export_files' in the session
ROOT, or browsed in Isabelle/jEdit via the "isabelle-export:"
file-system. To get generated code dumped into output, use "file \<open>\<close>".
Minor INCOMPATIBILITY.

* Code generation for OCaml: proper strings are used for literals.